Deploy benefits-8, benefits-num-3, about-1-2, menu-2, menu-4 sections

--- a/benefits-7.html
+++ b/benefits-7.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
-    <section class="benefits block section">
+    <section class="benefits section block">
       <div class="benefits__container container">
         <div class="benefits__text-block"> 
           <div class="benefits__title-block"> <span class="benefits__subtitle">Features</span>
