--- a/hero-5.html
+++ b/hero-5.html
@@ -20,13 +20,11 @@
                   <div class="hero__text-block">
                     <h2 class="hero__title">New furnishings in the main hall. There are blankets for winter gatherings</h2>
                     <p class="hero__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                  </div>
-                  <button class="hero__btn btn btn_large btn_white" type="button">Reserve a table 
-                    <svg class="hero__btn-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  </div><a class="hero__btn btn btn_large btn_white" href="#">Reserve a table 
+                    <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg>
-                  </button>
+                    </svg></a>
                 </div>
               </li>
               <li class="swiper-slide">
@@ -35,13 +33,11 @@
                   <div class="hero__text-block">
                     <h2 class="hero__title">New furnishings in the main hall. There are blankets for winter gatherings</h2>
                     <p class="hero__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                  </div>
-                  <button class="hero__btn btn btn_large btn_white" type="button">Reserve a table 
-                    <svg class="hero__btn-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  </div><a class="hero__btn btn btn_large btn_white" href="#">Reserve a table 
+                    <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg>
-                  </button>
+                    </svg></a>
                 </div>
               </li>
               <li class="swiper-slide">
@@ -50,13 +46,11 @@
                   <div class="hero__text-block">
                     <h2 class="hero__title">New furnishings in the main hall. There are blankets for winter gatherings</h2>
                     <p class="hero__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                  </div>
-                  <button class="hero__btn btn btn_large btn_white" type="button">Reserve a table 
-                    <svg class="hero__btn-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  </div><a class="hero__btn btn btn_large btn_white" href="#">Reserve a table 
+                    <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg>
-                  </button>
+                    </svg></a>
                 </div>
               </li>
               <li class="swiper-slide">
@@ -65,13 +59,11 @@
                   <div class="hero__text-block">
                     <h2 class="hero__title">New furnishings in the main hall. There are blankets for winter gatherings</h2>
                     <p class="hero__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                  </div>
-                  <button class="hero__btn btn btn_large btn_white" type="button">Reserve a table 
-                    <svg class="hero__btn-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  </div><a class="hero__btn btn btn_large btn_white" href="#">Reserve a table 
+                    <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg>
-                  </button>
+                    </svg></a>
                 </div>
               </li>
             </ul>
