--- a/hero-2.html
+++ b/hero-2.html
@@ -17,13 +17,11 @@
             <h2 class="hero__title">We design digital experiences that create more happy in the world</h2>
             <p class="hero__desc">— We’re a full-service design and development agency who specialise in simple, useful and beautiful solutions.</p>
           </div>
-          <div class="hero__btn-block">
-            <button class="hero__btn btn btn_large btn_trs-black" type="button">
-              <svg class="hero__btn-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <div class="hero__btn-block"><a class="hero__btn btn btn_large btn_trs-black" href="#">
+              <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M6 18L18 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                 <path d="M8.25 6H18V15.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-              </svg>Showreel
-            </button>
+              </svg>Showreel</a>
             <button class="hero__btn btn btn_large btn_black" type="button">Get in touch</button>
           </div>
         </div>
