Deploy contacts-4, gallery-3.4, gallery-3.6, gallery-5.2 sections

--- a/about-1-2.html
+++ b/about-1-2.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!-- Для About-2 добавить к about about_2-->
+    <!-- !!!Theme-->
     <!-- Добавить к block класс block_dark-->
     <!-- Заменить класс btn_black на btn_white-->
     <section class="about section block">
