--- a/hero-5.html
+++ b/hero-5.html
@@ -68,14 +68,14 @@
               </li>
             </ul>
             <div class="hero__slider-btn-block">
-              <button class="hero__slider-btn hero__slider-btn_prev" type="button">
-                <svg class="hero__slider-btn-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <button class="hero__slider-btn hero__slider-btn_prev btn-arrow" type="button">
+                <svg class="btn-arrow__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M20.25 12H3.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                   <path d="M10.5 5.25L3.75 12L10.5 18.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
               </button>
-              <button class="hero__slider-btn hero__slider-btn_next" type="button">
-                <svg class="hero__slider-btn-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <button class="hero__slider-btn hero__slider-btn_next btn-arrow" type="button">
+                <svg class="btn-arrow__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M3.75 12H20.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                   <path d="M13.5 5.25L20.25 12L13.5 18.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
