--- a/contacts-4.html
+++ b/contacts-4.html
@@ -10,8 +10,8 @@
     <!-- Добавить к block класс block_dark-->
     <section class="contacts section block">
       <div class="contacts__container container"> 
-        <div class="row"> 
-          <div class="col-6">
+        <div class="row contacts__container-inner">
+          <div class="col-6 col-lg">
             <div class="contacts__content"> 
               <div class="contacts__block"> 
                 <h2 class="contacts__title">Kontakt</h2>
@@ -80,6 +80,16 @@
                   </li>
                 </ul>
               </div>
+            </div>
+          </div>
+          <div class="col-6 col-lg"> 
+            <div class="contacts__map"> 
+              <picture class="contacts__img-wrap"> <img class="contacts__img" src="./assets/img/contacts/map-4.jpg" alt=""></picture>
+              <svg class="contacts__baloon" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M7 29H25" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M16 17C18.2091 17 20 15.2091 20 13C20 10.7909 18.2091 9 16 9C13.7909 9 12 10.7909 12 13C12 15.2091 13.7909 17 16 17Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M26 13C26 22 16 29 16 29C16 29 6 22 6 13C6 10.3478 7.05357 7.8043 8.92893 5.92893C10.8043 4.05357 13.3478 3 16 3C18.6522 3 21.1957 4.05357 23.0711 5.92893C24.9464 7.8043 26 10.3478 26 13V13Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
             </div>
           </div>
         </div>
