Deploy newsletter-2 contacts-2 sections

--- a/contacts-4.html
+++ b/contacts-4.html
@@ -11,6 +11,7 @@
     <section class="contacts section block">
       <div class="contacts__container container"> 
         <div class="row contacts__container-inner">
+          <div class="col-6 col-lg"></div>
           <div class="col-6 col-lg">
             <div class="contacts__content"> 
               <div class="contacts__block"> 
