--- a/feedback-3.html
+++ b/feedback-3.html
@@ -23,25 +23,25 @@
                 <div class="feedback__field-block">
                   <div class="feedback__field-block-row">
                     <div class="feedback__field"> 
-                      <label class="visually-hidden" for="name"> </label>
-                      <input id="name" type="text" placeholder="Name">
+                      <label class="visually-hidden" for="feedback-name">First name </label>
+                      <input id="feedback-name" type="text" placeholder="Name">
                     </div>
                     <div class="feedback__field"> 
-                      <label class="visually-hidden" for="surnam"> </label>
-                      <input id="surnam" type="text" placeholder="Surname">
+                      <label class="visually-hidden" for="feedback-surname">Last name</label>
+                      <input id="feedback-surname" type="text" placeholder="Surname">
                     </div>
                   </div>
                   <div class="feedback__field"> 
-                    <label class="visually-hidden" for="email"> </label>
-                    <input id="email" type="email" placeholder="Email">
+                    <label class="visually-hidden" for="feedback-email">Email</label>
+                    <input id="feedback-email" type="email" placeholder="Email">
                   </div>
                   <div class="feedback__field"> 
-                    <label class="visually-hidden" for="tel"> </label>
-                    <input id="tel" type="tel" placeholder="Phone number">
+                    <label class="visually-hidden" for="feedback-tel">Phone number</label>
+                    <input id="feedback-tel" type="tel" placeholder="Phone number">
                   </div>
                   <div class="feedback__field"> 
-                    <label class="visually-hidden" for="name"> </label>
-                    <textarea id="name" name="message" placeholder="Message" rows="1"></textarea>
+                    <label class="visually-hidden" for="feedback-message">Message</label>
+                    <textarea id="feedback-message" name="message" placeholder="Message" rows="1"></textarea>
                   </div>
                 </div>
                 <div class="feedback__bottom"> 
