Deploy newsletter-1, footer-3, benefits-4 sections and splitting blog-3 into blog-3-1 and blog-3-3 sections

--- a/newsletter-2.html
+++ b/newsletter-2.html
@@ -19,7 +19,7 @@
           </div>
           <div class="newsletter__form-block">
             <form class="newsletter__form" action="#"> 
-              <div class="newsletter__field">
+              <div class="field field_large">
                 <label class="visually-hidden" for="#newsletter-email"> </label>
                 <input id="newsletter-email" type="email" placeholder="Enter your email">
               </div>
