Deploy blog-3-1 section and splitting header-3 into blog-1-1 and blog-1-3 sections

--- a/blog-3-1.html
+++ b/blog-3-1.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles/blog-3-1.css">
+    <link rel="stylesheet" href="./assets/styles/blog-3.css">
+    <script defer src="./assets/scripts/blog-3-1.js"></script>
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
-    <!-- Заменить класс btn_black на btn_white-->
+    <!-- Добавить к btn-arrow класс btn-arrow_dark-->
     <section class="blog section block">
       <div class="blog__container container"> 
         <div class="blog__text-block"> 
@@ -17,83 +18,161 @@
           </div>
           <p class="blog__title-desc">Interviews, tips, guides, industry best practices, and news.</p>
         </div>
-        <ul class="row blog__list">
-          <li class="col-4 col-xl-6 col-md"> 
-            <div class="blog__item">
-              <div class="blog__link">
-                <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
-                <div class="blog__item-content">
-                  <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
-                    <div class="blog__name-block">
-                      <h3 class="blog__name">UX review presentations
+        <div class="blog__desktop">
+          <ul class="row blog__list">
+            <li class="col-4 col-xl-6 col-md"> 
+              <div class="blog__item"><a class="blog__link" href="#"> 
+                  <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
+                  <div class="blog__item-content">
+                    <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
+                      <div class="blog__name-block">
+                        <h3 class="blog__name">UX review presentations
+                          <svg class="blog__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5 15L15 5" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <path d="M6.875 5H15V13.125" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                          </svg>
+                        </h3>
+                      </div>
+                      <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
+                    </div>
+                    <ul class="blog__badge-list">
+                      <li> <span class="badge">Presentation</span></li>
+                      <li> <span class="badge">Presentation</span></li>
+                      <li> <span class="badge">Research</span></li>
+                    </ul>
+                  </div></a></div>
+            </li>
+            <li class="col-4 col-xl-6 col-md"> 
+              <div class="blog__item"><a class="blog__link" href="#"> 
+                  <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
+                  <div class="blog__item-content">
+                    <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
+                      <h3 class="blog__name">
+                         UX review presentations
                         <svg class="blog__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M5 15L15 5" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
                           <path d="M6.875 5H15V13.125" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
                         </svg>
                       </h3>
+                      <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
                     </div>
-                    <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
-                  </div>
-                </div>
-                <ul class="blog__badge-list">
-                  <li> <span class="badge">Presentation</span></li>
-                  <li> <span class="badge">Presentation</span></li>
-                  <li> <span class="badge">Research</span></li>
-                </ul>
-              </div>
-            </div>
-          </li>
-          <li class="col-4 col-xl-6 col-md"> 
-            <div class="blog__item">
-              <div class="blog__link">
-                <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
-                <div class="blog__item-content">
-                  <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
-                    <h3 class="blog__name">
-                       UX review presentations
-                      <svg class="blog__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M5 15L15 5" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
-                        <path d="M6.875 5H15V13.125" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
-                      </svg>
-                    </h3>
-                    <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
-                  </div>
-                </div>
-                <ul class="blog__badge-list">
-                  <li> <span class="badge">Presentation</span></li>
-                  <li> <span class="badge">Presentation</span></li>
-                  <li> <span class="badge">Research</span></li>
-                </ul>
-              </div>
-            </div>
-          </li>
-          <li class="col-4 col-xl-6 col-md"> 
-            <div class="blog__item">
-              <div class="blog__link">
-                <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
-                <div class="blog__item-content">
-                  <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
-                    <div class="blog__name-block">
-                      <h3 class="blog__name">UX review presentations
-                        <svg class="blog__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M5 15L15 5" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
-                          <path d="M6.875 5H15V13.125" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
-                        </svg>
-                      </h3>
+                    <ul class="blog__badge-list">
+                      <li> <span class="badge">Presentation</span></li>
+                      <li> <span class="badge">Presentation</span></li>
+                      <li> <span class="badge">Research</span></li>
+                    </ul>
+                  </div></a></div>
+            </li>
+            <li class="col-4 col-xl-6 col-md"> 
+              <div class="blog__item"><a class="blog__link" href="#"> 
+                  <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
+                  <div class="blog__item-content">
+                    <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
+                      <div class="blog__name-block">
+                        <h3 class="blog__name">UX review presentations
+                          <svg class="blog__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5 15L15 5" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <path d="M6.875 5H15V13.125" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                          </svg>
+                        </h3>
+                      </div>
+                      <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
                     </div>
-                    <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
-                  </div>
-                </div>
-                <ul class="blog__badge-list">
-                  <li> <span class="badge">Presentation</span></li>
-                  <li> <span class="badge">Presentation</span></li>
-                  <li> <span class="badge">Research</span></li>
-                </ul>
-              </div>
+                    <ul class="blog__badge-list">
+                      <li> <span class="badge">Presentation</span></li>
+                      <li> <span class="badge">Presentation</span></li>
+                      <li> <span class="badge">Research</span></li>
+                    </ul>
+                  </div></a></div>
+            </li>
+          </ul>
+          <button class="btn btn_large btn_black" type="button">View all posts</button>
+        </div>
+        <div class="blog__mobile">
+          <div class="swiper blog__slider">
+            <ul class="swiper-wrapper">
+              <li class="swiper-slide"> 
+                <div class="blog__item"><a class="blog__link" href="#"> 
+                    <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
+                    <div class="blog__item-content">
+                      <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
+                        <div class="blog__name-block">
+                          <h3 class="blog__name">UX review presentations
+                            <svg class="blog__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M5 15L15 5" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                              <path d="M6.875 5H15V13.125" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                          </h3>
+                        </div>
+                        <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
+                      </div>
+                      <ul class="blog__badge-list">
+                        <li> <span class="badge">Presentation</span></li>
+                        <li> <span class="badge">Presentation</span></li>
+                        <li> <span class="badge">Research</span></li>
+                      </ul>
+                    </div></a></div>
+              </li>
+              <li class="swiper-slide"> 
+                <div class="blog__item"><a class="blog__link" href="#"> 
+                    <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
+                    <div class="blog__item-content">
+                      <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
+                        <h3 class="blog__name">
+                           UX review presentations
+                          <svg class="blog__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5 15L15 5" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <path d="M6.875 5H15V13.125" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                          </svg>
+                        </h3>
+                        <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
+                      </div>
+                      <ul class="blog__badge-list">
+                        <li> <span class="badge">Presentation</span></li>
+                        <li> <span class="badge">Presentation</span></li>
+                        <li> <span class="badge">Research</span></li>
+                      </ul>
+                    </div></a></div>
+              </li>
+              <li class="swiper-slide"> 
+                <div class="blog__item"><a class="blog__link" href="#"> 
+                    <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
+                    <div class="blog__item-content">
+                      <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
+                        <div class="blog__name-block">
+                          <h3 class="blog__name">UX review presentations
+                            <svg class="blog__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M5 15L15 5" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                              <path d="M6.875 5H15V13.125" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                          </h3>
+                        </div>
+                        <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
+                      </div>
+                      <ul class="blog__badge-list">
+                        <li> <span class="badge">Presentation</span></li>
+                        <li> <span class="badge">Presentation</span></li>
+                        <li> <span class="badge">Research</span></li>
+                      </ul>
+                    </div></a></div>
+              </li>
+            </ul>
+            <div class="blog__slider-btn-block">
+              <button class="blog__slider-btn blog__slider-btn_prev btn-arrow" type="button">
+                <svg class="btn-arrow__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M20.25 12H3.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M10.5 5.25L3.75 12L10.5 18.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+              </button>
+              <button class="blog__slider-btn blog__slider-btn_next btn-arrow" type="button">
+                <svg class="btn-arrow__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M3.75 12H20.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M13.5 5.25L20.25 12L13.5 18.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+              </button>
             </div>
-          </li>
-        </ul>
-        <button class="btn btn_large btn_black" type="button">View all posts</button>
+          </div>
+        </div>
       </div>
     </section>
   </body>
