--- a/blog-3-3.html
+++ b/blog-3-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles/blog-3-3.css">
+    <link rel="stylesheet" href="./assets/styles/blog-3.css">
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
@@ -19,8 +19,7 @@
         </div>
         <ul class="row blog__list">
           <li class="col-4 col-xl-6 col-md"> 
-            <div class="blog__item">
-              <div class="blog__link">
+            <div class="blog__item"><a class="blog__link" href="#"> 
                 <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
                 <div class="blog__item-content">
                   <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
@@ -34,18 +33,15 @@
                     </div>
                     <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
                   </div>
-                </div>
-                <ul class="blog__badge-list">
-                  <li> <span class="badge">Presentation</span></li>
-                  <li> <span class="badge">Presentation</span></li>
-                  <li> <span class="badge">Research</span></li>
-                </ul>
-              </div>
-            </div>
+                  <ul class="blog__badge-list">
+                    <li> <span class="badge">Presentation</span></li>
+                    <li> <span class="badge">Presentation</span></li>
+                    <li> <span class="badge">Research</span></li>
+                  </ul>
+                </div></a></div>
           </li>
           <li class="col-4 col-xl-6 col-md"> 
-            <div class="blog__item">
-              <div class="blog__link">
+            <div class="blog__item"><a class="blog__link" href="#"> 
                 <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
                 <div class="blog__item-content">
                   <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
@@ -58,18 +54,15 @@
                     </h3>
                     <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
                   </div>
-                </div>
-                <ul class="blog__badge-list">
-                  <li> <span class="badge">Presentation</span></li>
-                  <li> <span class="badge">Presentation</span></li>
-                  <li> <span class="badge">Research</span></li>
-                </ul>
-              </div>
-            </div>
+                  <ul class="blog__badge-list">
+                    <li> <span class="badge">Presentation</span></li>
+                    <li> <span class="badge">Presentation</span></li>
+                    <li> <span class="badge">Research</span></li>
+                  </ul>
+                </div></a></div>
           </li>
           <li class="col-4 col-xl-6 col-md"> 
-            <div class="blog__item">
-              <div class="blog__link">
+            <div class="blog__item"><a class="blog__link" href="#"> 
                 <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
                 <div class="blog__item-content">
                   <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
@@ -83,14 +76,12 @@
                     </div>
                     <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
                   </div>
-                </div>
-                <ul class="blog__badge-list">
-                  <li> <span class="badge">Presentation</span></li>
-                  <li> <span class="badge">Presentation</span></li>
-                  <li> <span class="badge">Research</span></li>
-                </ul>
-              </div>
-            </div>
+                  <ul class="blog__badge-list">
+                    <li> <span class="badge">Presentation</span></li>
+                    <li> <span class="badge">Presentation</span></li>
+                    <li> <span class="badge">Research</span></li>
+                  </ul>
+                </div></a></div>
           </li>
         </ul>
         <button class="btn btn_large btn_black" type="button">View all posts</button>
